--- a/20_Example_Training/30_Training/trainSMRC.ipynb
+++ b/20_Example_Training/30_Training/trainSMRC.ipynb
@@ -141,9 +141,7 @@
         }
       ],
       "source": [
-        "!pip install -q tflite-model-maker\n",
-        "!pip install -q pycocotools\n",
-        "!pip install -q tflite-support"
+        "!pip install -q tflite-model-maker\n"
       ]
     },
     {
